...
          }}
        />
        <Tabs.Screen
          name="discover"
          options={{
            title: t('common.discover'),
            tabBarButtonTestID: 'discover-tab',
            tabBarIcon: ({ color }) => <Search size={iconSize} color={color} />,
          }}
        />
        <Tabs.Screen
          name="map"
          options={{
...
          }}
        />
        <Tabs.Screen
          name="profile"
          options={{
            title: t('common.profile'),
            tabBarButtonTestID: 'profile-tab',
            tabBarIcon: ({ color }) => <User size={iconSize} color={color} />,
          }}
        />
      </Tabs>
      <TutorialOverlay />
    </>
...
